# Uchrony-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  UchronyGame_Executable  demo  imgui.ini
.agent/: ARQUITECTURA_ESCENARIOS.md  GLOSARIO_TECNICO.md  GUIA_ONBOARDING.md  TUTORIAL_PASO_A_PASO.md
Include/: Game.hpp  Scene.hpp  SpriteInfo.hpp
Include/Classes/: Entity.hpp  GameManager.hpp  ObjectRoom.hpp  Past.hpp  PastTree.hpp  Present.hpp  Room.hpp  RoomObject.hpp  TreePasts.hpp
Include/Core/: Game.hpp  GameBackup.hpp  GameState.hpp  SceneData.hpp  SceneRegistry.hpp  Screen.hpp
Include/Entities/: Animator.hpp  Inventory.hpp  Item.hpp  NPC.hpp  Player.hpp
Include/GameStates/: Dialogue1.hpp  Ejemplo.hpp  GenericScene.hpp  MainMenu.hpp  PlantillaEscena.hpp  Screen1.hpp
Include/Pasts/: Past0.hpp  PastA.hpp  PastB.hpp  PastExample.hpp  Present.hpp
Include/Scene/: StartScene.hpp
Include/Scenes/: End_pan1.hpp  End_pan2.hpp  End_pan3.hpp  End_pan4.hpp  StartScene.hpp  loco1.hpp  loco2.hpp  loco3.hpp
Include/Utils/: Assets.hpp  Collision.hpp  Config.hpp  DialogueData.hpp  DialogueLine.hpp  DialogueManager.hpp  DialogueSequence.hpp  DialogueStack.hpp  DialogueUI.hpp  Enums.hpp  GameUtilities.hpp  Geometry.hpp  MenuUI.hpp  NavGrid.hpp  Pathfinder.hpp  SceneFactory.hpp
lib/: imgui.ini
lib/imgui-sfml/: CMakeLists.txt
src/: DialogueManager.cpp  DialogueUI.cpp  Game.cpp  MenuUI.cpp  Scene.cpp  SpriteInfo.cpp  demo copy.cpp  demo.cpp  demo2.cpp  demoedw.cpp  main.cpp
src/Classes/: GameManager.cpp  ObjectRoom.cpp  Past.cpp  PastTree.cpp  Room.cpp  TreePasts.cpp
src/Core/: DialogueStack.cpp  DialogueUI.cpp  Game.cpp  GameBackup.cpp  SceneRegistry.cpp
src/Entities/: Animator.cpp  Inventory.cpp  Item.cpp  NPC.cpp  Player.cpp
src/GameStates/: Dialogue1.cpp  GenericScene.cpp  MainMenu.cpp  Screen1.cpp
src/Pasts/: Past0.cpp  PastA.cpp  PastB.cpp  PastExample.cpp
src/Scenes/: End_pan1.cpp  End_pan2.cpp  End_pan3.cpp  End_pan4.cpp  StartScene.cpp  loco1.cpp  loco2.cpp  loco3.cpp
src/Utils/: Collision.cpp  GameUtilities.cpp  NavGrid.cpp  Pathfinder.cpp  SceneFactory.cpp
